2006-11-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* organic_std.C (Initialization): Use 'add_surface'.
	* bioincorporation.C (add): Ditto.

	* weather.h (reletive_humidity): New pure virtual.
	* weather_old.C, weather_std.C: Implement it.
	* weather.h (has_relative_humidity): New virtual function.
	* weather.C, weather_std.C: Implement it.
	
2006-11-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log, select: Rewrote so they use a 'Volume' object to limit
	logging rather than a top and a bottom height.


2006-11-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bound.C: New component.

2006-11-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.10 released.

2006-11-09  Birgitte Gjettermann  <bgj@kvl.dk>

	* photo_GL.C, photo.h (assimilate): New members in function call.

	* crop_std.C, crop_sold.C, crop_old.C, crop_simple.C, crop.h (tick): 
	Modified to include different types of radiation. 

	* bioclimate_std.C (struct BioclimateStandard)
	(total_PAR_, sun_PAR_, sun_LAI_fraction_): New members.

	* bioclimate_std.C (raddist, difrad): New data members.  
	(sun_PAR, sun_LAI_fraction): New member functions.
	(load_syntax): Added "raddist" and "difrad".

	* bioclimate.h (sun_PAR, sun_LAI_fraction): New virtual member 
	functions.

2006-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (multiply): Multiple with [cm^3] added.

	* volume_box.C: New model.
	* Makefile (MODELS): Use it.

2006-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* volume.C, volume.h: New component.
	* Makefile (COMPONENTS): Added it.

	* select_volume.C: New model.
	* Makefile (MODELS): Added it.

2006-11-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* uz1d_none.C: New model.
	* Makefile (MODELS): Added it.

2006-10-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_walltime.C: New model.
	* Makefile (MODELS): Added it.

	* bioclimate_std.C (load_syntax): Fix type of 'difrad'.

2006-10-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* uz1d_richard.C: New model.